fixed error of Resume Template

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^19.2.1",
     "react-router-dom": "^7.10.1",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.26.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
